//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  channelsAuthor Channel [not null]
  channelsMember UserOnChannel [not null]
  issueTrackerMember IssueTrackerMember [not null]
  role Role [not null]
}

Table Channel {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  description String
  trackers IssueTracker [not null]
  categories ChannelCategory [not null]
  author User [not null]
  authorId String [not null]
  members UserOnChannel [not null]
  inviteLink String [unique, not null]
}

Table UserOnChannel {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  channel Channel [not null]
  channelId String [not null]
}

Table ChannelCategory {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  channel Channel [not null]
  channelId String [not null]
  trackers IssueTracker [not null]
}

Table IssueTrackerMember {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  tracker IssueTracker [not null]
  trackerId String [not null]
  reportsAuthor IssueReport [not null]
  reportsResponsible IssueReport [not null]
  role MemberRole [not null]
  comments Comment [not null]
}

Table IssueTracker {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  channel Channel [not null]
  channelId String [not null]
  category ChannelCategory [not null]
  categoryId String [not null]
  members IssueTrackerMember [not null]
  reports IssueReport [not null]
  title String [not null]
  description String
}

Table IssueReport {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tracker IssueTracker [not null]
  trackerId String [not null]
  author IssueTrackerMember [not null]
  authorId String [not null]
  responsiblePerson IssueTrackerMember
  responsiblePersonId String
  title String [not null]
  description String
  priority IssueReportPriority [not null]
  status IssueReportStatus [not null]
  type IssueReportType [not null]
  comments Comment [not null]
}

Table Comment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  content String [not null]
  report IssueReport [not null]
  reportId String [not null]
  author IssueTrackerMember [not null]
  authorId String [not null]
}

Enum Role {
  ADMIN
  USER
}

Enum MemberRole {
  GUEST
  DEV
  QA
}

Enum IssueReportStatus {
  FULFILMENT
  DISCUSSION
  TO_APPROVE
  NEW
  CLOSED
}

Enum IssueReportPriority {
  LOW
  NORMAL
  HIGH
  CRITICAL
}

Enum IssueReportType {
  FUNCTIONALITY
  OTHER
  VULNERABILITY
  REPORTING
}

Ref: Channel.authorId > User.id [delete: Cascade]

Ref: UserOnChannel.userId > User.id [delete: Cascade]

Ref: UserOnChannel.channelId > Channel.id [delete: Cascade]

Ref: ChannelCategory.channelId > Channel.id [delete: Cascade]

Ref: IssueTrackerMember.userId > User.id [delete: Cascade]

Ref: IssueTrackerMember.trackerId > IssueTracker.id [delete: Cascade]

Ref: IssueTracker.channelId > Channel.id [delete: Cascade]

Ref: IssueTracker.categoryId > ChannelCategory.id [delete: Cascade]

Ref: IssueReport.trackerId > IssueTracker.id [delete: Cascade]

Ref: IssueReport.authorId > IssueTrackerMember.id

Ref: IssueReport.responsiblePersonId > IssueTrackerMember.id

Ref: Comment.reportId > IssueReport.id [delete: Cascade]

Ref: Comment.authorId > IssueTrackerMember.id [delete: Cascade]